--- a/clase1/index.html
+++ b/clase1/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">
+        <button>Volver</button>
+    </a>
+    <h1>
+        <center>No se te olvide abrir la consola con F12</center>
+    </h1>
     <script src="ejercicio1.js" type="module"></script>
     <script src="ejercicio2.js" type="module"></script>
     <script src="ejercicio3.js" type="module"></script>
