--- a/clase5/index.html
+++ b/clase5/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">
+        <button>Volver</button>
+    </a>
+    <h1>
+        <center>No se te olvide abrir la consola con F12</center>
+    </h1>
     <script src="ejercicio15.js" type="module"></script>
     <script src="ejercicio16.js" type="module"></script>
     <script src="ejercicio17.js" type="module"></script>
