--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
+
 <body>
     <a href="clase1/index.html">
         <button>Clase 1</button>
@@ -21,6 +22,12 @@
     </a>
     <a href="clase5/index.html">
         <button>Clase 5</button>
+    </a>
+    <a href="clase6/index.html">
+        <button>Clase 6</button>
+    </a>
+    <a href="clase7/index.html">
+        <button>Clase 7</button>
     </a>
 </body>
 </html>
