ejercicios hasta clase 8 falta clase 9

--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
     <a href="clase7/index.html">
         <button>Clase 7</button>
     </a>
+    <a href="clase8/index.html">
+        <button>Clase 8</button>
+    </a>
+    <a href="clase9/index.html">
+        <button>Clase 9</button>
+    </a>
 </body>
 </html>
